--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Tutorial Backend for Blog Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
+    "test-dev": "jest"
   },
   "keywords": [
     "Mongo",
@@ -21,7 +23,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
