--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_DB_URI = mongodb+srv://odongo:password@secretserver.e5kih.mongodb.net/blog?retryWrites=true&w=majority
+MONGO_DB_URI = mongodb+srv://odongo:F7kOWectLTK06G3Z@secretserver.e5kih.mongodb.net/blog?retryWrites=true&w=majority
