--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
-MONGO_DB_URI = mongodb+srv://odongo:F7kOWectLTK06G3Z@secretserver.e5kih.mongodb.net/blog?retryWrites=true&w=majority
+MONGO_DB_URI = mongodb+srv://odongo:password@secretserver.e5kih.mongodb.net/blog?retryWrites=true&w=majority
+POSTGRESQL_DB_HOST = myinstance.123456789012.us-east-1.rds.amazonaws.com
+POSTGRESQL_DB_USER = odongo
+POSTGRESQL_DB_PASSWORD = 12345
+POSTGRESQL_DB = postgres
+MYSQL_DB_HOST = database-1.cgdxt5vmfnws.us-east-2.rds.amazonaws.com
+MYSQL_DB_USER = odongo
+MYSQL_DB_PASSWORD = Nairobi1986
+MYSQL_DB = blogs
+
+
+
