--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.11.14"
+    "mongoose": "^5.11.14",
+    "mysql2": "^2.2.5",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
