Updated with passport

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_DB_URI = mongodb+srv://odongo:password@secretserver.e5kih.mongodb.net/blog?retryWrites=true&w=majority
+MONGO_DB_URI = mongodb+srv://odongo:L9XKEtOe5gz6NbWK@secretserver.e5kih.mongodb.net/blog?retryWrites=true&w=majority
 POSTGRESQL_DB_HOST = myinstance.123456789012.us-east-1.rds.amazonaws.com
 POSTGRESQL_DB_USER = odongo
 POSTGRESQL_DB_PASSWORD = 12345
